<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/negative_response"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"/>

        <LinearLayout android:id="@+id/positive_response"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <!--MAIN-->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/city_name"
                    android:textSize="22.5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"/>

                <TextView android:id="@+id/main_weather"
                    android:textSize="30sp"
                    android:layout_below="@+id/city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

                <TextView android:id="@+id/temp"
                    android:textSize="40sp"
                    android:layout_below="@+id/main_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"/>

            </RelativeLayout>

            <!--TODAY-->

            <TextView
                android:text="@string/today"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:weightSum="1"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView android:id="@+id/sunrise_img"
                        android:layout_weight="0.4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView android:id="@+id/sunrise"
                        android:gravity="center"
                        android:layout_weight="0.6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:weightSum="1"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView android:id="@+id/sunset_img"
                        android:layout_weight="0.4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView android:id="@+id/sunset"
                        android:gravity="center"
                        android:layout_weight="0.6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <!--NOW-->
            <TextView
                android:text="@string/now"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView android:id="@+id/clouds_img"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/clouds"
                    android:text="@string/clouds"
                    android:gravity="right"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView android:id="@+id/wind_img"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/wind"
                    android:text="@string/wind"
                    android:gravity="right"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView android:id="@+id/humidity_img"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView android:id="@+id/humidity"
                    android:text="@string/humidity"
                    android:gravity="right"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>